@@ -1,3 +1,9 @@
+2013-07-30  Jan Hubicka  <jh@suse.cz>
+	    Martin Liska  <marxin.liska@gmail.com>
+
+	* profile.c (compute_value_histograms): Do not ICE when
+	there is mismatch only on some counters.
+
 2013-07-30  Zhenqiang Chen  <zhenqiang.chen@linaro.org>
 
 	PR rtl-optimization/57637
